Fixed sprites being the wrong size and fixed add contact icon.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -50,7 +50,7 @@ disable-grayscale-image()
 
 sprites-background()
   background-image asseturl('/images/sprites2x.png')
-  background-size 260px 82px
+  background-size 260px 93px
   background-repeat no-repeat
 
 sprite-icon()
@@ -1886,12 +1886,9 @@ home-modal-inner-width = home-modal-width - 2 * home-modal-horiz-padding
     sprites-background()
     sprite-icon()
     width 32px
-    height 25px
-    background-position -39px -53px
+    height 28px
+    background-position -39px -59px
     margin-left 9px
-
-  .add-contacts-name
-    margin-top 6px
 
   .room-avatar, .add-contacts-icon
     float left
@@ -1905,6 +1902,9 @@ home-modal-inner-width = home-modal-width - 2 * home-modal-horiz-padding
     margin-left 50px // Avatar width.
     margin-top 5px
     margin-bottom 5px
+
+  .add-contacts-name
+    margin-top 7px
 
 
 room-content-margin-width = 10px
